--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,3 +1,21 @@
+body {
+    width: 100%;
+    background-color: #01CDFA;
+    color: #00658E;
+    font-family: Roboto, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#root {
+    max-width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
 form {
     width: 100%;
     display: flex;
@@ -8,4 +26,186 @@ form {
 
 .formLabel {
     width: 100%;
+}
+
+.bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    right: 15px;
+    top: 15px;
+}
+
+.bm-burger-bars {
+    background: white;
+}
+
+.bm-menu-wrap {
+    width: 30%;
+}
+
+.bm-item-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.bm-item-list a {
+    color: red;
+    width: 100%;
+}
+
+nav {
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+}
+
+nav .logo {
+    margin: 0 auto;
+}
+
+.pageContainer {
+    width: 85%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.infoRow {
+    width: 100%;
+    background-color: white;
+    margin: 5px 0;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.queenRow,
+.queenRow:visited,
+.queenRow:link {
+    text-align: center;
+    text-decoration: none;
+    color: #00658E;
+}
+
+.queenRow .queenName {
+    flex-grow: 1;
+}
+
+.queenIcon {
+    width: 30px;
+    border-radius: 15px;
+    margin-left: 15px;
+}
+
+.queenRow .queenPoints {
+    margin-right: 15px;
+}
+
+.playerRow .playerName {
+    margin: 0;
+    text-align: center;
+    flex-grow: 1;
+}
+
+.playerRow .trophyContainer {
+    width: 20px;
+    margin-right: 15px;
+}
+
+.playerRow .playerScore {
+    margin: 10px 0 10px 15px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.players h2 {
+    width: 100%;
+    text-align: center;
+}
+
+select {
+    background-color: white;
+    border: none;
+    height: 25px;
+    width: 50%;
+    text-align: center;
+    color: #00658E;
+}
+
+.players .playerTeam {
+    margin-top: 20px;
+    width: 100%;
+}
+
+.players .playerTeam .queenRow {
+    margin-top: 10px;
+}
+
+.players .playerTeam .teamPoints {
+    font-size: 20px;
+}
+
+.weeks h2 {
+    width: 100%;
+    text-align: center;
+}
+
+.weeks .weekField {
+    margin-bottom: 7px;
+}
+
+.weeks .weekWinnersContainer {
+    width: 100%;
+}
+
+form {
+    margin-left: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+form .formText {
+    margin-right: 35%;
+}
+
+form .formText input {
+    border: none;
+    height: 20px;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-right: 30%;
+}
+
+form .formCheckboxContainer {
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+form .checkboxRow {
+    width: 100%;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+form .checkboxRow input {
+    width: 25px;
+    height: 25px;
+    background: transparent;
+    border: none;
+}
+
+form .checkboxRow label {
+    margin-left: 10px;
 }
