--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,5 +1,6 @@
 body {
     width: 100%;
+    margin: 0;
     background-color: #01CDFA;
     color: #00658E;
     font-family: Roboto, sans-serif;
@@ -28,35 +29,7 @@ form {
     width: 100%;
 }
 
-.bm-burger-button {
-    position: fixed;
-    width: 36px;
-    height: 30px;
-    right: 15px;
-    top: 15px;
-}
-
-.bm-burger-bars {
-    background: white;
-}
-
-.bm-menu-wrap {
-    width: 30%;
-}
-
-.bm-item-list {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.bm-item-list a {
-    color: red;
-    width: 100%;
-}
-
-nav {
+.siteNav {
     margin-top: 25px;
     display: flex;
     align-items: center;
@@ -178,6 +151,7 @@ form .formText {
 
 form .formText input {
     border: none;
+    padding-left: 10px;
     height: 20px;
     border-radius: 10px;
     margin-top: 5px;
@@ -191,21 +165,153 @@ form .formCheckboxContainer {
     flex-wrap: wrap;
 }
 
-form .checkboxRow {
+form .formCheckbox {
     width: 100%;
-    margin-top: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-form .checkboxRow input {
+form .formCheckbox input {
     width: 25px;
     height: 25px;
     background: transparent;
     border: none;
 }
 
-form .checkboxRow label {
-    margin-left: 10px;
+.queenInfoContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.queenInfoContainer h1 {
+    text-align: center;
+}
+
+.queenInfo img {
+    width: 50%;
+    margin: 0 20%;
+}
+
+.queenInfo .queenInfoData {
+    width: 50%;
+    margin: 15px 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.queenInfo .queenInfoData p {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+}
+
+.queenInfo .queenInfoData h4 {
+    margin: 0;
+}
+
+
+/* Position and sizing of burger button */
+
+.bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    right: 20px;
+    top: 20px;
+}
+
+
+/* Color/shape of burger icon bars */
+
+.bm-burger-bars {
+    background: white;
+}
+
+
+/* Color/shape of burger icon bars on hover*/
+
+.bm-burger-bars-hover {
+    background: white;
+}
+
+
+/* Position and sizing of clickable cross button */
+
+.bm-cross-button {
+    height: 30px;
+    width: 30px;
+}
+
+
+/* Color/shape of close button cross */
+
+.bm-cross {
+    background: white;
+}
+
+
+/*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+
+.bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+}
+
+
+/* General sidebar styles */
+
+.bm-menu {
+    background: #373a47;
+    font-size: 1.15em;
+}
+
+
+/* Morph shape necessary with bubble or elastic */
+
+.bm-morph-shape {
+    fill: #373a47;
+}
+
+
+/* Wrapper for item list */
+
+.bm-item-list {
+    margin-left: 20px;
+}
+
+
+/* Individual item */
+
+.bm-item,
+.bm-item:link,
+.bm-item:visited {
+    color: #01CDFA;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.5em;
+    width: 100%;
+    margin-top: 20px;
+}
+
+
+/* Styling of overlay */
+
+.bm-overlay {
+    background: #00658E;
+}
+
+.rules h2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.rules li {
+    margin-top: 10px;
 }
